--- a/views/list.jade
+++ b/views/list.jade
@@ -1,6 +1,28 @@
-h1='The 11th JCO Schedule'
-ul
-	li
-		a(href='/p/1') p1
-	li
-		a(href='/p/2') p2
+head
+	script(src='http://code.jquery.com/jquery-1.6.1.min.js')
+	script(type='text/javascript')
+		$(function(){
+			$('li a').click(function(){
+				var url = $(this).attr('href');
+				var title = $(this).text();
+				console.log(url);
+				console.log(title);
+				document.location.href = url+"/"+title;
+				return false;
+			});
+		});		
+body
+	h1='The 11th JCO Schedule'
+	ul
+		li
+			a(href='/p/jco') JCO
+		li
+			a(href='/p/t1s1') 개발자를 위한 SW 아키텍처 설계의 기초(강승준)
+		li
+			a(href='/p/t1s2') Google App Engine과 Android 하모니(변형규 외 4명)
+		li
+			a(href='/p/t1s3') Reverse Engineering, 안드로이드 학습(진성주)
+		li
+			a(href='/p/t1s4') 꺼지지 않는 JVM Java Hot Deployment(강구원)
+		li
+			a(href='/p/t1s5') 레거시 시스템을 위한 테스트 자동화 환경구축 방안(최영목)
