--- a/views/presentation.jade
+++ b/views/presentation.jade
@@ -10,15 +10,18 @@ html(lang='utf-8')
 				socket.connect();
 				socket.send({'type':'subscribe', 'channel':'#{p_id}'});
 				socket.on('message', function(obj){
+					var message = obj.msg;
 					console.log(obj);
-					console.log('I got you: ' + obj.message);
-					$("#feedbacks").append("<li>" + obj.from + ": " + obj.message + "</li>")
+					console.log('I got you: ' + message);
+					$("#feedbacks").append("<li>[" + message.from + "]님은 " + message.emotion + ' "' + message.body +  '"</li>');
 					$("#comment").attr('value', '');
 				});
 				$('#send_comment').click(function(){
-					var val = document.getElementById('comment').value;
-					socket.send({'type':'publish', 'channel':'#{p_id}', 'msg':val, 'from':'#{email}'});
-					console.log(val);
+					var msg_body = $('#comment').attr('value');
+					var msg_emotion = $('#emotion :selected').attr('value');
+					socket.send({'type':'publish', 'channel':'#{p_id}', 'msg':{'body':msg_body, 'from':'#{email}', 'emotion':msg_emotion}});
+					console.log(msg_body);
+					console.log(msg_emotion);
 				});
 				
 			});
@@ -26,8 +29,13 @@ html(lang='utf-8')
 		h1 #{title}
 		p feedbacks
 		ul(id='feedbacks')
-		label #{email}: 
-			input(id='comment', name='comment', autocomplete='off')
+		select(id='emotion')
+			option(value='불만이 있습니다.') 불만입니다.
+			option(value='다르게 생각합니다.') 이의있습니다.
+			option(value='좋아합니다.', selected=true) 좋습니다.
+			option(value='공감하고 있습니다.') 공감합니다.
+			option(value='궁금해 합니다.') 궁금합니다.
+		input(id='comment', name='comment', autocomplete='off', size='50')
 		button(id='send_comment') Send
 
 	
