modified email to username

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,5 @@
 h1='Realtime Feedbacks for the 11th JCO'
 form(method='post', action='/login')
-	label email: 
-		input(name='email')
+	label 이름: 
+		input(name='username')
 	input(type='submit', value='Login')
