--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,5 @@
-h1='Realtime Feedbacks for the 11th JCO'
+h1='2011 자바 개발자 컨퍼런스 피드백'
 form(method='post', action='/login')
 	label 이름: 
 		input(name='username')
-	input(type='submit', value='Login')
+	input(type='submit', value='Go!')
