--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,5 +2,6 @@
 html
 	head
 		title= "Realtime Feedbacks"
+	link(rel='stylesheet', href='/stylesheets/jquery-ui-1.8.13.custom.css')
 	link(rel='stylesheet', href='/stylesheets/style.css')
 	body!= body
