--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,7 @@
+* {
+	padding: 0px;
+	margin: 0px;
+}
 p {
 	margin: 0px;
 }
@@ -5,8 +9,12 @@ body {
 	padding: 20px;
 	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
+ul {
+	list-style: none;
+}
 a {
 	color: #00B7FF;
+	text-decoration: none;
 }
 .ui-button {
 	font-size: 0.8em;
@@ -43,8 +51,45 @@ a {
 	float: right;
 	margin-top: 10px;
 	margin-bottom: 10px;
-	
 }
 #input_bar {
 	clear: both;
+}
+.tag {
+    background-color: #333333;
+    border: 1px solid #333333;
+    border-radius: 5px 5px 5px 5px;
+    color: #FFFFFF !important;
+    display: inline-block;
+    line-height: 1.9;
+    margin: 0 3px 3px 0;
+    padding: 0 10px 0 10px;
+    text-decoration: none;
+}
+.tag:hover {
+	cursor: pointer;
+	background-color: #C0D0DC;
+    border: 1px solid #C0D0DC;
+	
+}
+.tag-count {
+	color: #444444;
+    font-size: 120%;
+    font-weight: bold;
+    margin-right: 4px;
+}
+.dis {
+	background-color: #E8272C;
+}
+.diff {
+	background-color: #FE7A15;
+}
+.like {
+	background-color: #a4c639;
+}
+.same {
+	background-color: #00AFEF;
+}
+.que {
+	background-color: #4176ab;
 }
