--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -78,22 +78,40 @@ a {
     font-weight: bold;
     margin-right: 4px;
 }
-.dis {
+#statics_bar .dis {
 	background-color: #E8272C;
 }
-.diff {
+#statics_bar .diff {
 	background-color: #FE7A15;
 }
-.like {
+#statics_bar .like {
 	background-color: #a4c639;
 }
-.same {
+#statics_bar .same {
 	background-color: #00AFEF;
 }
-.que {
+#statics_bar .que {
 	background-color: #4176ab;
 }
 .emoticon {
 	width: 20px;
 	height: 20px;
+}
+.msg_body {
+	font-style: italic;
+}
+#rt_feedbacks .dis {
+	color: #E8272C;
+}
+#rt_feedbacks .diff {
+	color: #FE7A15;
+}
+#rt_feedbacks .like {
+	color: #a4c639;
+}
+#rt_feedbacks .same {
+	color: #00AFEF;
+}
+#rt_feedbacks .que {
+	color: #4176ab;
 }
