--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,10 @@
-!!!
+!!! 5
 html
 	head
 		title= "Realtime Feedbacks"
-	link(rel='stylesheet', href='/stylesheets/jquery-ui-1.8.13.custom.css')
+		meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1")
 	link(rel='stylesheet', href='/stylesheets/style.css')
+	link(rel='stylesheet', href='/stylesheets/base.css')
+	link(rel='stylesheet', href='/stylesheets/layout.css')
+	link(rel='stylesheet', href='/stylesheets/skeleton.css')
 	body!= body
