--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,6 @@ h1='2011 자바 개발자 컨퍼런스 피드백'
 form(method='post', action='/login')
 	label 이름: 
 		input(name='username')
+		- if (typeof(error) != 'undefined')
+			span(class='error_msg') #{error}
 	input(type='submit', value='Go!')
