--- a/views/presentation.jade
+++ b/views/presentation.jade
@@ -97,7 +97,7 @@ html(lang='utf-8')
 			});
 	body(id='chat_body')
 		div(id='title_bar')
-			p #{username} reacts to #{title}
+			p #{username}, Let's react to #{title}
 		div(id='chat_box')
 			ul(id='rt_feedbacks')
 			div(id='statics_bar')
