style sheets cleanup.

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,9 +1,9 @@
-div.container.center
+div.container.center.index
 	div.header
 		h1='2011 자바 개발자 컨퍼런스 피드백'
 	div.article
 		form(method='post', action='/login')
-			h4='Nick Name: '
+			h4.subheader='Nick Name: '
 			input(type='text', name='username')
 			input(type='submit', value='Go!')
 	div.footer
