css file cleanup

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,9 +1,8 @@
 !!! 5
-html
+html(lang='utf-8')
 	head
 		title= "Realtime Feedbacks"
 		meta(name="viewport", content="width=device-width, initial-scale=1, maximum-scale=1")
 	link(rel='stylesheet', href='/stylesheets/style.css')
-	link(rel='stylesheet', href='/stylesheets/layout.css')
 	link(rel='stylesheet', href='/stylesheets/skeleton.css')
 	body!= body
