--- a/public/stylesheets/skeleton.css
+++ b/public/stylesheets/skeleton.css
@@ -23,7 +23,7 @@
 
 	.container { position: relative; width: 840px; margin:auto; background:#FFF; padding: 60px; -webkit-border-radius:5px;  -moz-border-radius:5px;  border-radius:5px;top:5%;}
 	.container.center{text-align: center;}
-	.container.index{top:20%;}
+	.container.index{top:25%;}
 	
 /* #Tablet (Portrait)
 ================================================== */	
@@ -31,7 +31,8 @@
 	/* Note: Design for a width of 768px */
 
 	@media only screen and (min-width: 768px) and (max-width: 959px) {
-		.container { width: 758px; top:0 !important;padding:0 5px;}
+		.container { width: 748px; top:5%;padding:30px 10px;}
+		.container.index{top:25%;}
 	}
 	
 	
