--- a/views/list.jade
+++ b/views/list.jade
@@ -16,7 +16,57 @@ div.container.center
 			li
 				a(href='/p/t1s5') 레거시 시스템을 위한 테스트 자동화 환경구축 방안(최영목)
 			li
-				a(href='/p/t1s5') 레거시 시스템을 위한 테스트 자동화 환경구축 방안(최영목)
+				a(href='/p/t2s1') 자바개발자의 관점에서 생각한 데이터 보호 기법(석기명)
+			li
+				a(href='/p/t2s2') LBS with MongoDB(이용혁)
+			li
+				a(href='/p/t2s3') Realtime Web Application with Java(변정훈, 박용권)
+			li
+				a(href='/p/t2s4') Framework Engineering(손영수)
+			li
+				a(href='/p/t2s5') MongoDB with Play(채수원)
+			li
+				a(href='/p/t3s1') 진골 자바개발자의 Mobile 기업 창업기(조지훈)
+			li
+				a(href='/p/t3s2') 도메인 주도 개발 DDD(김민재)
+			li
+				a(href='/p/t3s3') EGit과 github를 활용한 소스 관리(허광남)
+			li
+				a(href='/p/t3s4') 오픈소스를 활용한 NHN 배치 처리 플랫폼 공유(김용환)
+			li
+				a(href='/p/t3s5') 오라클 세션
+			li
+				a(href='/p/t4s1') 스마트폰에서 크로스 플랫폼 개발(서진호)
+			li
+				a(href='/p/t4s2') 클라우드 시대의 데이터베이스 NoSQL 개념 및 사례(김형준)
+			li
+				a(href='/p/t4s3') 오픈소스(OpenStack) 기반의 Public/Private 클라우드 구축 기술 및 발전 방향(안재석)
+			li
+				a(href='/p/t4s4') Advanced Memcached(안성화)
+			li
+				a(href='/p/t4s5') Hybrid 환경에 대한 HP의 Cloud Model 및 Offering(김종록, 염승명)
+			li
+				a(href='/p/t5s1') Cloud 소개 및 도입효과(윤동식)
+			li
+				a(href='/p/t5s2') KT PaaS Internal(최형호)
+			li
+				a(href='/p/t5s3') KT Cloud Open API(정문조)
+			li
+				a(href='/p/t5s4') Open ECO 환경에서의 스마트 비즈니스 전략(방형빈)
+			li
+				a(href='/p/t5s5') KT 세션
+			li
+				a(href='/p/t6s1') Java Annotation과 MyBatis로 나만의 ORM 프레임웤을 만들어보자(강동혁)
+			li
+				a(href='/p/t6s2') 클라우드 환경에서 Java EE 운영환경 구축하기(KT)
+			li
+				a(href='/p/t6s3') Eclipse RAP(Single Source - desktop, web, mobile)(조현종)
+			li
+				a(href='/p/t7s1') 키워드기반 웹 UI 테스트 자동화 by kUTAF(화창득)
+			li
+				a(href='/p/t7s2') 제니퍼도 울고갈 BTrace(이상민)
+			li
+				a(href='/p/t7s3') Apache Maven(박재성)
 	div.footer
 		a(href='http://springsprout.org') made by 봄싹
 script(src='http://code.jquery.com/jquery-1.6.1.min.js')
