--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -284,6 +284,7 @@ ol, ul {list-style: none; }
 	margin-top: 10px;
 	margin-bottom: 10px;
 	margin-right: 5px;
+	overflow: scroll;
 }
 #statics_bar {
 	width: 150px;
